--- a/styles/main.css
+++ b/styles/main.css
@@ -1,44 +1,265 @@
-header {
-    background: hsl(0, 0%, 100%);
+body {
+    background-color: #F7F7F7;
+    font-family: 'Public Sans', sans-serif;
+}
+.container {
     width: 1440px;
-    height: 70px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: 0 auto;
 }
-.logo {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left:70px;
+
+
+
+.header-content {
+    background-color: #F7F7F7;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
 }
-.links {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.menuul {
+    list-style: none;
+    padding: 0;
+}
+ul li {
+    display: inline-block;
+    margin: 0px 20px;
+    font-size: 24px;
+    
+}
+.menuul li a {
+    color: black;
 }
 a {
     text-decoration: none;
-    color: lightslategray;
-    margin: 10px;
-    font-size: 20px;
+}
+.menuul li:hover {
+    border-bottom: solid 1px;
 }
 .request_invite1 {
+    position: relative;
     background-image: linear-gradient(to right, #0DDC5B, #27CBDF);    
-    position: absolute;
-    top: 50%;
-    left: 1150px;
-    transform: translateY(-50%);
-    width: 160px;
-    height: 45px;
+    width: 10%;
+    height: 35px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .request_invite1_a {
-    position: absolute;
-    top: 30%;
-    transform: translateY(-50%);
-    color: hsl(0, 0%, 100%);
-    left: 8%;
-    font-family: "Public Sans";
+    color: black;
+}
+.hamburger {
+    display: none;
+}
+
+
+
+.back {
+    width: 100%;
+    background-color: #F0F0F0;
+}
+.advs {
+    background-color: #EEE;
+}
+.advs-text {
+    padding-top: 40px;
+}
+.advs-h1 {
+    margin: 0 auto;
+    font-size: 35px;
+    display: block;
+    margin-bottom: 40px;
+}
+.advs-h4 {
+    margin: 0 auto;
+    font-size: 20px;
+    display: block;
+    margin-bottom: 40px;
+}
+.advs-icons {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.advs-icon {
+    width: calc(25% - 20px);
+    padding: 0 10px;
+}
+.advs-h3 {
+    font-size: 28px;
+}
+.advs-p {
+    font-size: 18px;
+}
+
+@media all and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    .advs-icon {
+        width: calc(50% - 20px);
+    }
+    .advs-h1 {
+        text-align: center;
+    }
+    .advs-h4 {
+        text-align: center;
+    }
+}
+@media all and (max-width: 480px) {
+    .container {
+        width: 100%;
+    }
+    .advs-icon {
+        width: 100%;
+    }
+}
+
+
+
+.news {
+    background-color: #F7F7F7;
+    margin: 0 auto;
+    margin-bottom: 70px;
+}
+.news-h1 {
+    margin: 0 auto;
+    font-size: 35px;
+    display: block;
+    margin-top: 40px;
+}
+.articles {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+
+.article-card {
+    width: calc(25% - 30px);
+    padding: 0 15px;
+}
+
+.card-wrapper {
+    background: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.art-img {
+    width: 100%;
+    height: 240px;
+    object-fit: cover;
+}
+
+.art_text {
+    background-color: white;
+    margin-left: 10%;
+}
+.autor {
+    font-size: 15px;
+}
+h3 {
+    font-size: 23px;
+}
+.desc {
+    font-size: 17px;
+}
+.art_a {
+    color: black;
+}
+.art_a:hover {
+    color: hsl(136, 65%, 51%);
+}
+
+@media all and (max-width: 768px) {
+    .article-card {
+        width: 50%;
+    }
+    .news-h1 {
+        text-align: center;
+    }
+}
+@media all and (max-width: 480px) {
+    .article-card {
+        width: 100%;
+    }
+}
+
+
+
+.footer {
+    background-image: linear-gradient(to right, #0DDC5B, #27CBDF);
+}
+.footer-div {
+    display: flex;
+    align-items: center;
+}
+.social {
+    margin-right: 170px;
+}
+.part1 {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+.part2 {
+    width: 30%;
+}
+.footer-logo {
+    margin-bottom: 40px;
+    padding-top: 50px;
+}
+.socs {
+    padding-bottom: 40px;
+}
+.footer-menu {
+    display: flex;
+    align-items: center;
+    margin-right: 390px;
+}
+.col a {
+    display: block;
+    color: black;
+    margin: 10px 50px;
+    font-size: 18px;
+}
+.request_invite2 {
+    position: relative;
+    background-image: linear-gradient(to right, #0DDC5B, #27CBDF);    
+    width: 40%;
+    height: 40px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.request_invite2 a {
+    color: black;
+}
+
+@media all and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    .social {
+        position: relative;
+        left: 5%;
+        margin-right: 30px;
+    }
+    .col a {
+        margin: 10px 30px;
+    }
+    .request_invite2 {
+        width: 70%;
+    }
+}
+@media all and (max-width: 480px) {
+    .request_invite2 {
+        display: none;
+    }
+    .footer-p {
+        display: none;
+    }
 }
